# a126cpp

./: .gitignore  .gitmodules  ALPHA_AUDIT.md  BETA_1.0_TO_1.2_02_ADDITIONS.md  BLOCK_PORT_ANALYSIS.md  CMakeLists.txt  FISHING_IMPLEMENTATION.txt  ITEM_PORTING_SUMMARY.md  README.md  TILE_COMPARISON_AUDIT.md  TILE_DROPS_AND_TOOLS_AUDIT.md  errors.txt  errs.txt  hello.txt  install-ubuntu-deps.sh  jackass.bat  shit.txt  shithead.c  woops.txt
.github/workflows/: cmake-multi-platform.yml
src/: SharedConstants.cpp  SharedConstants.h
src/client/: Minecraft.cpp  Minecraft.h  Options.cpp  Options.h  ProgressRenderer.cpp
src/client/gamemode/: GameMode.cpp  GameMode.h  MultiplayerMode.cpp  MultiplayerMode.h  SurvivalMode.cpp  SurvivalMode.h
src/client/gui/: Button.h  ChatLine.cpp  ChatLine.h  ChestScreen.cpp  ChestScreen.h  ClientOptionsScreen.cpp  ClientOptionsScreen.h  ControllerCalibrationScreen.cpp  ControllerCalibrationScreen.h  ControllerSettingsScreen.cpp  ControllerSettingsScreen.h  DeathScreen.cpp  DeathScreen.h  Font.cpp  Font.h  FurnaceScreen.cpp  FurnaceScreen.h  Gui.cpp  Gui.h  GuiChat.cpp  GuiChat.h  GuiConnectFailed.cpp  GuiConnectFailed.h  GuiConnecting.cpp  GuiConnecting.h  GuiDownloadTerrain.cpp  GuiDownloadTerrain.h  GuiMessage.cpp  GuiMessage.h  GuiMultiplayer.cpp  GuiMultiplayer.h  GuiNewChat.cpp  GuiNewChat.h  GuiTextField.cpp  GuiTextField.h  InventoryScreen.cpp  InventoryScreen.h  OptionsScreen.cpp  PauseScreen.cpp  Screen.cpp  (+9 more)
src/client/locale/: Language.cpp
src/client/model/: BoatModel.cpp  BoatModel.h  ChickenModel.cpp  ChickenModel.h  CowModel.cpp  CowModel.h  CreeperModel.cpp  CreeperModel.h  Cube.cpp  Cube.h  GhastModel.cpp  GhastModel.h  HumanoidModel.cpp  MinecartModel.cpp  MinecartModel.h  PigModel.cpp  PigModel.h  Polygon.cpp  Polygon.h  QuadrupedModel.cpp  QuadrupedModel.h  SheepFurModel.cpp  SheepFurModel.h  SheepModel.cpp  SheepModel.h  SignModel.cpp  SignModel.h  SkeletonModel.cpp  SkeletonModel.h  SlimeModel.cpp  SlimeModel.h  SpiderModel.cpp  SpiderModel.h  ZombieModel.cpp  ZombieModel.h
src/client/multiplayer/: MultiPlayerChunkCache.cpp  MultiPlayerChunkCache.h  MultiPlayerLevel.cpp  MultiPlayerLevel.h
src/client/particle/: BubbleParticle.cpp  BubbleParticle.h  Particle.cpp  Particle.h  ParticleEngine.cpp  ParticleEngine.h  PortalParticle.cpp  PortalParticle.h  SplashParticle.cpp  SplashParticle.h  TakeAnimationParticle.cpp  TakeAnimationParticle.h  TerrainParticle.cpp  TerrainParticle.h  WaterDropParticle.cpp  WaterDropParticle.h
src/client/player/: ControllerInput.cpp  ControllerInput.h  EntityClientPlayerMP.cpp  EntityClientPlayerMP.h  LocalPlayer.cpp  LocalPlayer.h
src/client/renderer/: Chunk.cpp  Chunk.h  ChunkRebuildThread.cpp  ChunkRebuildThread.h  GameRenderer.cpp  GameRenderer.h  HttpTexture.cpp  HttpTexture.h  HttpTextureProcessor.h  ItemInHandRenderer.cpp  ItemInHandRenderer.h  LevelRenderer.cpp  LevelRenderer.h  MobSkinTextureProcessor.cpp  MobSkinTextureProcessor.h  OffsettedRenderList.cpp  OffsettedRenderList.h  Tesselator.cpp  Tesselator.h  TextureClockFX.cpp  TextureClockFX.h  TextureCompassFX.cpp  TextureCompassFX.h  TextureFX.cpp  TextureFX.h  TextureFireFX.cpp  TextureFireFX.h  TextureLavaFX.cpp  TextureLavaFX.h  TextureLavaSideFX.cpp  TextureLavaSideFX.h  TexturePortalFX.cpp  TexturePortalFX.h  TextureWaterFX.cpp  TextureWaterFX.h  TextureWaterSideFX.cpp  TextureWaterSideFX.h  Textures.cpp  Textures.h  TileRenderer.cpp  (+1 more)
src/client/sound/: Sound.h  SoundEngine.cpp  SoundEngine.h  SoundRepository.cpp  SoundRepository.h
src/client/title/: TitleScreen.cpp  TitleScreen.h
src/java/: BufferedImage.cpp  BufferedImage.h  File.cpp  File.h  IOUtil.cpp  String.cpp
src/network/: NetClientHandler.cpp  NetClientHandler.h  NetHandler.cpp  NetHandler.h  NetworkManager.cpp  NetworkManager.h  NetworkMasterThread.cpp  NetworkMasterThread.h  NetworkReaderThread.cpp  NetworkReaderThread.h  NetworkWriterThread.cpp  NetworkWriterThread.h  Packet.cpp  Packet.h  Packet0KeepAlive.cpp  Packet0KeepAlive.h  Packet100OpenWindow.cpp  Packet100OpenWindow.h  Packet101CloseWindow.cpp  Packet101CloseWindow.h  Packet102WindowClick.cpp  Packet102WindowClick.h  Packet103SetSlot.cpp  Packet103SetSlot.h  Packet104WindowItems.cpp  Packet104WindowItems.h  Packet105UpdateProgressbar.cpp  Packet105UpdateProgressbar.h  Packet106Transaction.cpp  Packet106Transaction.h  Packet10Flying.cpp  Packet10Flying.h  Packet11PlayerPosition.cpp  Packet11PlayerPosition.h  Packet12PlayerLook.cpp  Packet12PlayerLook.h  Packet130UpdateSign.cpp  Packet130UpdateSign.h  Packet131MapData.cpp  Packet131MapData.h  (+99 more)
src/pc/: CrashHandler.cpp  Main.cpp  OpenGL.h  OpenGL_BGFX.h  WinMain.cpp
src/pc/lwjgl/: BGFXCompat.cpp  BGFXCompat.h  BGFXCompatGlue.h  BGFXContext.cpp  BGFXContext.h  Display.cpp  GLContext.cpp  GLContext.h  Gamepad.cpp  Gamepad.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/pc/win32/: Alpha126Cpp.rc
src/util/: BlockDropTest.cpp  BlockDropTest.h  IntHashMap.h  WinHttpClient.cpp  WinHttpClient.h  musDecode.h
src/world/: CompoundContainer.cpp  CompoundContainer.h
src/world/entity/: DataWatcher.cpp  DataWatcher.h  Entity.cpp  Entity.h  EntityIDs.h  EntityIO.cpp  EntityIO.h  FlyingMob.cpp  FlyingMob.h  Mob.cpp  Mob.h  MobCategory.cpp  MobCategory.h  Painting.cpp  Painting.h  PrimedTnt.cpp  PrimedTnt.h  WatchableObject.h
src/world/item/: Item.cpp  Item.h  ItemArmor.cpp  ItemArmor.h  ItemAxe.cpp  ItemAxe.h  ItemBoat.cpp  ItemBoat.h  ItemBow.cpp  ItemBow.h  ItemBucket.cpp  ItemBucket.h  ItemDoor.cpp  ItemDoor.h  ItemFishingRod.cpp  ItemFishingRod.h  ItemFlintAndSteel.cpp  ItemFlintAndSteel.h  ItemFood.cpp  ItemFood.h  ItemHoe.cpp  ItemHoe.h  ItemMinecart.cpp  ItemMinecart.h  ItemPainting.cpp  ItemPainting.h  ItemPickaxe.cpp  ItemPickaxe.h  ItemRecord.cpp  ItemRecord.h  ItemRedstone.cpp  ItemRedstone.h  ItemReed.cpp  ItemReed.h  ItemSaddle.cpp  ItemSaddle.h  ItemSeeds.cpp  ItemSeeds.h  ItemSign.cpp  ItemSign.h  (+14 more)
src/world/level/: ChunkPos.cpp  ChunkPos.h  Explosion.cpp  Explosion.h  Level.cpp  Level.h  MobSpawner.cpp  MobSpawner.h  NextTickListEntry.cpp  (+3 more)
(+310 files in other folders)
